# ComputerVisionExperiment

./: .gitignore  CMakeLists.txt  CMakePresets.json
CMake/: SetupConfig.cmake
Source/CodeBase/: CMakeLists.txt  main.cpp
Source/CodeBase/Core/: Core.h
